<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".User.WhoAreWeActivity">

    <TextView
        android:id="@+id/backS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="35dp"
        android:drawableTop="@drawable/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/backS">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="-16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/Prisoners"
                    android:textColor="@color/purple_700"
                    android:textSize="27sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/who_are"
                    android:textColor="@color/black_just"
                    android:textSize="22sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView2" />

                <View
                    android:id="@+id/views2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView22" />

                <TextView
                    android:id="@+id/textVie3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/goals"
                    android:textColor="@color/purple_700"
                    android:textSize="27sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/views2" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/black_just"
                    android:textSize="22sp"
                    android:text="@string/achieve"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textVie3" />

                <View
                    android:id="@+id/views33"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView33" />


                <TextView
                    android:id="@+id/textVie4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/message"
                    android:textColor="@color/purple_700"
                    android:textSize="27sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/views33" />

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/black_just"
                    android:textSize="22sp"
                    android:text="@string/Working"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textVie4" />

                <View
                    android:id="@+id/views44"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView44" />

                <TextView
                    android:id="@+id/textVie5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/Projects"
                    android:textColor="@color/purple_700"
                    android:textSize="27sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/views44" />

                <TextView
                    android:id="@+id/textView55"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/black_just"
                    android:textSize="22sp"
                    android:text="@string/kindergarten"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textVie5" />

                <View
                    android:id="@+id/views55"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView55" />

                <TextView
                    android:id="@+id/textVie6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/headquarters"
                    android:textColor="@color/purple_700"
                    android:textSize="27sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/views55" />

                <TextView
                    android:id="@+id/textView66"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/black_just"
                    android:textSize="22sp"
                    android:text="@string/association_city"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textVie6" />

                <View
                    android:id="@+id/views66"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView66" />






            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>